# Zero2Prod

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Features.md  README.md  rust-toolchain.toml  rustfmt.toml  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yaml  pre-commit.yaml  rust_tests.yaml
.sqlx/: query-1040a62d3f514a4524a7f0df4162a56c32c6d832b725870e0c2e704b9b42b662.json  query-11e09460d9c56556c25387a55b36f5cf702ccb6ecf0d67ab0e8b03f502d7e6da.json  query-155351dbd140ebb2b399fe6b719b8af9e6e80c5a2f1d5fca8f14134db1b8a03d.json  query-17cd6a069bd1bad101f9940990c29146d0ef7bac197b98631f53b3e8a039d47e.json  query-2277a88a49f7b743972eec3bd720c09574c007bf3fcb4360d65ae048bd629c02.json  query-3897a1662e7e8f90cf7dfa06886697735d0574a0504bb267d1e4fc7b55999f1a.json  query-41048d8a25bb81effa1c6451b17ef01962f997862d5eaa1c399594a1feecdc79.json  query-44c6b87978725eaad3d89341afdc6cea23a459e6564626c9462bd03109057cf7.json  query-4af0f82393a19682c97b35616f8414f8e2e5f497b536fbcb80a6c66da5b160b1.json  query-4f2bcfdeb3a50419d57f34495a78e20ad3ebc9df51447ebbbcac7ff0fb810918.json  query-776e96815d20868953a226b857df760ec3983bccbd75c26b254c2a24246a579f.json  query-8100d108f7072f94799506b619c0d1d7e98f95365f81ba9b17a63b6a6ddc4aa4.json  query-842254a202f146a9c0dc65b748ae1e4e9baa4afbfeb4c7a0e1bb8d31dd977da0.json  query-89efecaac4af8a7177a563b907c74163bace9369bfb9cea25bd0caa68a564908.json  query-a07853451060bd81416c1f76864e61b6bcd49599bf9def99f51f49ff39b61ad7.json  query-a7953fb6ed603ae347903940525d58966e9abbf77cc6e1a499039467a56ff127.json  query-af41ba33c876c8e0a334b9c1f1120fbd5b6a61eb5142a586854c0d3ec6fd2f54.json  query-bc01a4e63b53df1a0da70ad66b36a8c134d9c726a687761863d0f4e9330f0de5.json  query-c6137d3ed7b326ec7d0da92c663b29e8ad1db26c9bde5b89d47b04c2b22bef85.json  query-d819c5051d7a642e7910f0d8463ab434b5b4973066de0405add01517c4d1bb59.json  query-e521315792207c11bbe0dc563ecc4ea894e56be1f2bd031dd3df4ceaf5ce6c75.json  query-efeea11bf83086c20d64ed8b63e7163afc38a7415e2a425f878106ec27018b6e.json  query-f2434fcd1aabf7585ffd4fbfe4911c2ad12f57fbd03433970badbb8433d77b5f.json
configuration/: base.yaml  production.yaml
migrations/: 20260303133456_make_status_not_null_in_subscriptions.sql  20260303133720_create_subscriptions_tokens_table.sql  20260307052236_adding_created_at_table_for_token_expiry.sql  20260307124825_adding_a_consumed_at_column_to_subscription_tokens.sql
scripts/: init_db.sh  remove_docker.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/email_client/: email_body.rs  mod.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscription.rs  subscriptions_confirm.rs  token_expiry.rs
