[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
publish = false
authors = ["Shubhendu Anupam Dutta <shubhenduanupam@gmail.com>"]
repository = "https://github.com/shubhenduanupamdutta/Zero2Prod"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.12.1"
chrono = { version = "0.4.43", default-features = false, features = [
    "serde",
    "clock",
] }
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.13.2"
