[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
publish = false
authors = ["Shubhendu Anupam Dutta <shubhenduanupam@gmail.com>"]
repository = "https://github.com/shubhenduanupamdutta/Zero2Prod"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.12.1"
chrono = { version = "0.4.43", default-features = false, features = [
    "serde",
    "clock",
] }
config = "0.15.19"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.21"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.21.0", features = ["v4"] }
validator = "0.20.0"

[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
rand = "^0.9.0"
